[package]
name = "async-debounce"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Jamison <caleb@cbjamo.com>"]
description = "Debounce using embedded-hal and embedded-hal-async traits and embassy-time"
repository = "https://github.com/CBJamo/async-debounce"
license = "MIT OR Apache-2.0"
keywords = ["async", "no_std", "IO", "debounce"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-time = "0.3"
